--- a/services.html
+++ b/services.html
@@ -1,33 +1,72 @@
-<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>Réserver – Rword Manar</title><link rel="stylesheet" href="css/style.css"/></head><body>
-<header><nav class="navbar"><div class="logo">Rword Manar</div>
-<ul class="nav-links">
-  <li><a href="index.html">Accueil</a></li>
-  <li><a href="about.html">À propos</a></li>
-  <li><a href="services.html" class="active">Réserver</a></li>
-  <li><a href="translators.html">Traducteurs</a></li>
-  <li><a href="contact.html">Contact</a></li>
-  <li><a href="try.html">Essayer</a></li>
-</ul></nav></header><main><section class="features">
-  <h1>Réserver une séance</h1>
-  <form id="booking-form">
-    <label>Date :</label><input type="date" id="date" required>
-    <label>Heure :</label><input type="time" id="time" required>
-    <label>Domaine :</label><select id="specialty">
-      <option>Juridique</option><option>Médical</option><option>Administratif</option>
-    </select>
-    <button type="submit" class="btn">Réserver</button>
-  </form>
-  <p id="confirmation-message"></p>
-</section></main><footer><p>&copy; 2025 Rword Manar. Tous droits réservés.</p></footer>
-<script>
-document.getElementById('booking-form').addEventListener('submit', e => {
-  e.preventDefault();
-  const date = document.getElementById('date').value;
-  const time = document.getElementById('time').value;
-  const specialty = document.getElementById('specialty').value;
-  document.getElementById('confirmation-message').textContent =
-    `Réservation confirmée pour ${specialty} le ${date} à ${time}.`;
-});
-</script></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Réserver – Rword Manar</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <header>
+    <nav class="navbar">
+      <div class="logo">Rword Manar</div>
+      <ul class="nav-links">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="about.html">À propos</a></li>
+        <li><a href="services.html" class="active">Réserver</a></li>
+        <li><a href="translators.html">Traducteurs</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="try.html">Essayer</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="features">
+      <h1>Réserver une séance</h1>
+      <form id="booking-form">
+        <label for="date">Date :</label>
+        <input type="date" id="date" required>
+
+        <label for="time">Heure :</label>
+        <input type="time" id="time" required>
+
+        <label for="specialty">Domaine :</label>
+        <select id="specialty" required>
+          <option value="Juridique">Juridique</option>
+          <option value="Médical">Médical</option>
+          <option value="Administratif">Administratif</option>
+        </select>
+
+        <label for="email">Adresse e-mail :</label>
+        <input type="email" id="email" placeholder="exemple@mail.com" required>
+
+        <label for="phone">Numéro de téléphone :</label>
+        <input type="tel" id="phone" placeholder="+213 6xx xx xx xx" required>
+
+        <button type="submit" class="btn">Réserver</button>
+      </form>
+      <p id="confirmation-message"></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Rword Manar. Tous droits réservés.</p>
+  </footer>
+
+  <script>
+    document.getElementById('booking-form').addEventListener('submit', e => {
+      e.preventDefault();
+      const date = document.getElementById('date').value;
+      const time = document.getElementById('time').value;
+      const specialty = document.getElementById('specialty').value;
+      const email = document.getElementById('email').value;
+      const phone = document.getElementById('phone').value;
+
+      document.getElementById('confirmation-message').textContent =
+        `✅ Réservation confirmée pour ${specialty} le ${date} à ${time}.
+         📧 Email : ${email} | 📞 Téléphone : ${phone}`;
+    });
+  </script>
+</body>
+</html>
