--- a/services.html
+++ b/services.html
@@ -7,19 +7,13 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">Rword Manar</div>
-      <ul class="nav-links">
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="about.html">À propos</a></li>
-        <li><a href="services.html" class="active">Réserver</a></li>
-        <li><a href="translators.html">Traducteurs</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="try.html">Essayer</a></li>
-      </ul>
-    </nav>
-  </header>
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Réserver – Rword Manar</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
 
   <main>
     <section class="features">
