--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <h1>Bienvenue sur Rword Manar</h1>
   <p>Traduction en temps réel avec des traducteurs algériens qualifiés.</p>
   <a href="services.html" class="btn">Réserver maintenant</a>
-</section></header>
+</section>
 <footer><p>&copy; 2025 Rword Manar. Tous droits réservés.</p></footer>
 </body></html>
