--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 </ul></nav>
 <section class="hero">
   <h1>Bienvenue sur Rword Manar</h1>
-  <p>Traduction en temps réel avec des traducteurs algériens qualifiés.</p>
+  <p>Traduisez vos idées. Connectez votre monde.</p>
+  <p style="font-size: 1.1rem; max-width: 600px; margin: 1rem auto;">
+    🌍 Nous croyons que chaque mot peut franchir les frontières. Grâce à notre équipe de traducteurs algériens experts, vous bénéficiez d’un service rapide, fiable et humain.
+  </p>
+  <p style="font-size: 1rem; color: #ffca28; font-weight: bold;">
+    ✨ Faites confiance à notre savoir-faire pour vos besoins juridiques, médicaux ou administratifs.
+  </p>
   <a href="services.html" class="btn">Réserver maintenant</a>
 </section>
 <footer><p>&copy; 2025 Rword Manar. Tous droits réservés.</p></footer>
