--- a/css/try.html
+++ b/css/try.html
@@ -34,51 +34,55 @@
     </section>
   </main>
 
-  <script>
-    document.getElementById('try-form').addEventListener('submit', async function(e) {
-      e.preventDefault();
-
-      const input = document.getElementById('input-text').value.trim();
-      const from = document.getElementById('from').value;
-      const to = document.getElementById('to').value;
-      const specialty = document.getElementById('specialty').value;
-      const output = document.getElementById('translation-output');
-
-      if (!input) {
-        output.innerHTML = "<p style='color:red;'>Veuillez entrer un texte.</p>";
-        return;
-      }
-
-      output.innerHTML = "<p>⏳ Traduction en cours...</p>";
-
-      try {
-        const formData = new FormData();
-        formData.append("text", input);
-        formData.append("from", from);
-        formData.append("to", to);
-
-        const res = await fetch("translate.php", {
-          method: "POST",
-          body: formData
-        });
-
-        const data = await res.json();
-
-        if (data.translations) {
-          output.innerHTML = `
-            <h3>Résultat (${from} → ${to}) – Domaine : ${specialty}</h3>
-            <p style="background:#e3f2fd;padding:1rem;border-radius:5px;">
-              ${data.translations[0].text}
-            </p>
-            <p><a href="services.html" class="btn">Réservez une session ${specialty.toLowerCase()}</a></p>`;
+ es.html" class="btn">Réservez une session ${specialty.toLowerCase()}</a></p>`;
         } else {
           output.innerHTML = "<p style='color:red;'>❌ Erreur API DeepL.</p>";
-        }
-      } catch (err) {
-        output.innerHTML = "<p style='color:red;'>❌ Une erreur est survenue.</p>";
-        console.error(err);
-      }
+       <script>
+document.getElementById('try-form').addEventListener('submit', async function(e) {
+  e.preventDefault();
+
+  const input = document.getElementById('input-text').value.trim();
+  const from = document.getElementById('from').value;
+  const to = document.getElementById('to').value;
+  const specialty = document.getElementById('specialty').value;
+  const output = document.getElementById('translation-output');
+
+  if (!input) {
+    output.innerHTML = "<p style='color:red;'>Veuillez entrer un texte.</p>";
+    return;
+  }
+
+  output.innerHTML = "<p>⏳ Traduction en cours...</p>";
+
+  try {
+    const formData = new FormData();
+    formData.append("text", input);
+    formData.append("from", from);
+    formData.append("to", to);
+
+    const res = await fetch("translate.php", {
+      method: "POST",
+      body: formData
     });
-  </script>
+
+    const data = await res.json();
+
+    if (data.translations) {
+      output.innerHTML = `
+        <h3>Résultat (${from} → ${to}) – Domaine : ${specialty}</h3>
+        <p style="background:#e3f2fd;padding:1rem;border-radius:5px;">
+          ${data.translations[0].text}
+        </p>
+        <p><a href="services.html" class="btn">Réservez une session ${specialty.toLowerCase()}</a></p>`;
+    } else {
+      output.innerHTML = "<p style='color:red;'>❌ Erreur API DeepL.</p>";
+    }
+  } catch (err) {
+    output.innerHTML = "<p style='color:red;'>❌ Une erreur est survenue.</p>";
+    console.error(err);
+  }
+});
+</script>
+
 </body>
 </html>
