--- a/try.html
+++ b/try.html
@@ -4,70 +4,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Essayer – Rword Manar</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">Rword Manar</div>
-      <ul class="nav-links">
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="about.html">À propos</a></li>
-        <li><a href="services.html">Réserver</a></li>
-        <li><a href="translators.html">Traducteurs</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="try.html" class="active">Essayer</a></li>
-      </ul>
-    </nav>
-  </header>
-
   <main>
-  <section class="features centered-section">
-    <h1>🎯 Essayez notre service</h1>
-    <form id="try-form">
-      <div class="form-group">
+    <section class="features">
+      <h1>🎯 Essayez notre service</h1>
+      <form id="try-form">
         <label for="specialty">Spécialité :</label>
         <select id="specialty" required>
           <option value="Juridique">Juridique</option>
           <option value="Médical">Médical</option>
           <option value="Administratif">Administratif</option>
         </select>
-      </div>
 
-      <div class="form-group">
         <label for="from">Langue source :</label>
-        <select id="from">
-          <option value="FR">Français</option>
-          <option value="EN">Anglais</option>
-        </select>
-      </div>
+        <select id="from"><option value="fr">Français</option><option value="en">Anglais</option></select>
 
-      <div class="form-group">
         <label for="to">Langue cible :</label>
-        <select id="to">
-          <option value="EN">Anglais</option>
-          <option value="FR">Français</option>
-        </select>
-      </div>
+        <select id="to"><option value="en">Anglais</option><option value="fr">Français</option></select>
 
-      <div class="form-group">
         <label for="input-text">Texte à traduire :</label>
         <textarea id="input-text" maxlength="300" rows="4" placeholder="Entrez votre texte ici..." required></textarea>
-        <small class="char-limit">Max 300 caractères</small>
-      </div>
 
-      <button type="submit" class="btn">Traduire</button>
-    </form>
+        <button type="submit" class="btn">Traduire</button>
+      </form>
 
-    <div id="translation-output" class="translation-box"></div>
-  </section>
-</main>
+      <div id="translation-output"></div>
+    </section>
+  </main>
 
-  <footer>
-    <p>&copy; 2025 Rword Manar. Tous droits réservés.</p>
-  </footer>
-
-  <!-- ✅ SCRIPT DeepL avec spécialité + clé mise à jour -->
   <script>
     document.getElementById('try-form').addEventListener('submit', async function(e) {
       e.preventDefault();
@@ -83,40 +49,37 @@
         return;
       }
 
-      output.innerHTML = "<p>⏳ Traduction en cours via DeepL...</p>";
+      output.innerHTML = "<p>⏳ Traduction en cours...</p>";
 
       try {
-        const formData = new URLSearchParams();
-        formData.append("auth_key", "bd2847d8-5a58-4d4b-8cf7-5a3eda9ec670:fx");
-        formData.append("text", input);
-        formData.append("source_lang", from);
-        formData.append("target_lang", to);
-
-        const res = await fetch("https://api-free.deepl.com/v2/translate", {
+        const res = await fetch("https://libretranslate.com/translate", {
           method: "POST",
           headers: {
-            "Content-Type": "application/x-www-form-urlencoded"
+            "Content-Type": "application/json"
           },
-          body: formData.toString()
+          body: JSON.stringify({
+            q: input,
+            source: from,
+            target: to,
+            format: "text"
+          })
         });
-
-        if (!res.ok) {
-          const errorText = await res.text();
-          console.error("Erreur API :", errorText);
-          throw new Error("Erreur DeepL : " + res.status);
-        }
 
         const data = await res.json();
 
-        output.innerHTML = `
-          <h3>Résultat (${from} → ${to}) – Domaine : ${specialty}</h3>
-          <p style="background:#e3f2fd;padding:1rem;border-radius:5px;">
-            ${data.translations[0].text}
-          </p>
-          <p><a href="services.html" class="btn">Réservez une session ${specialty.toLowerCase()}</a></p>`;
+        if (data.translatedText) {
+          output.innerHTML = `
+            <h3>Résultat (${from} → ${to}) – Domaine : ${specialty}</h3>
+            <p style="background:#e3f2fd;padding:1rem;border-radius:5px;">
+              ${data.translatedText}
+            </p>
+            <p><a href="services.html" class="btn">Réservez une session ${specialty.toLowerCase()}</a></p>`;
+        } else {
+          output.innerHTML = "<p style='color:red;'>❌ Erreur lors de la traduction.</p>";
+        }
       } catch (err) {
-        console.error("Erreur attrapée :", err);
-        output.innerHTML = "<p style='color:red;'>❌ Une erreur est survenue. Vérifie ta connexion ou réessaie plus tard.</p>";
+        output.innerHTML = "<p style='color:red;'>❌ Une erreur est survenue.</p>";
+        console.error(err);
       }
     });
   </script>
