--- a/try.html
+++ b/try.html
@@ -4,7 +4,52 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Essayer – Rword Manar</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f9f9f9;
+      color: #333;
+    }
+    .features {
+      max-width: 600px;
+      margin: auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      margin-top: 4rem;
+    }
+    h1 {
+      text-align: center;
+      color: #0d47a1;
+    }
+    label {
+      display: block;
+      margin-top: 1rem;
+    }
+    input, select, textarea {
+      width: 100%;
+      padding: 0.8rem;
+      margin-top: 0.3rem;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    .btn {
+      margin-top: 1rem;
+      background-color: #ffc107;
+      color: #0d47a1;
+      padding: 0.8rem;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    #translation-output {
+      margin-top: 2rem;
+      background: #e3f2fd;
+      padding: 1rem;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
   <main>
@@ -19,10 +64,16 @@
         </select>
 
         <label for="from">Langue source :</label>
-        <select id="from"><option value="fr">Français</option><option value="en">Anglais</option></select>
+        <select id="from">
+          <option value="fr">Français</option>
+          <option value="en">Anglais</option>
+        </select>
 
         <label for="to">Langue cible :</label>
-        <select id="to"><option value="en">Anglais</option><option value="fr">Français</option></select>
+        <select id="to">
+          <option value="en">Anglais</option>
+          <option value="fr">Français</option>
+        </select>
 
         <label for="input-text">Texte à traduire :</label>
         <textarea id="input-text" maxlength="300" rows="4" placeholder="Entrez votre texte ici..." required></textarea>
@@ -52,7 +103,7 @@
       output.innerHTML = "<p>⏳ Traduction en cours...</p>";
 
       try {
-        const res = await fetch("https://libretranslate.com/translate", {
+        const res = await fetch("https://libretranslate.de/translate", {
           method: "POST",
           headers: {
             "Content-Type": "application/json"
@@ -70,12 +121,10 @@
         if (data.translatedText) {
           output.innerHTML = `
             <h3>Résultat (${from} → ${to}) – Domaine : ${specialty}</h3>
-            <p style="background:#e3f2fd;padding:1rem;border-radius:5px;">
-              ${data.translatedText}
-            </p>
-            <p><a href="services.html" class="btn">Réservez une session ${specialty.toLowerCase()}</a></p>`;
+            <p>${data.translatedText}</p>
+          `;
         } else {
-          output.innerHTML = "<p style='color:red;'>❌ Erreur lors de la traduction.</p>";
+          output.innerHTML = "<p style='color:red;'>❌ Erreur de traduction.</p>";
         }
       } catch (err) {
         output.innerHTML = "<p style='color:red;'>❌ Une erreur est survenue.</p>";
