--- a/services.html
+++ b/services.html
@@ -1,65 +1,59 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Réserver – Rword Manar</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <title>Test Paiement PayPal</title>
 </head>
 <body>
- <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Réserver – Rword Manar</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <h1>Réservation + Paiement</h1>
 
+  <form id="booking-form">
+    <label>Date : <input type="date" id="date" required></label><br>
+    <label>Heure : <input type="time" id="time" required></label><br>
+    <label>Nom : <input type="text" id="name" required></label><br>
+    <button type="submit">Réserver</button>
+  </form>
 
-  <main>
-    <section class="features">
-      <h1>Réserver une séance</h1>
-      <form id="booking-form">
-        <label for="date">Date :</label>
-        <input type="date" id="date" required>
+  <p id="confirmation-message"></p>
 
-        <label for="time">Heure :</label>
-        <input type="time" id="time" required>
+  <div id="payment-box" style="display:none;">
+    <h3>Paiement PayPal</h3>
+    <div id="paypal-button-container"></div>
+  </div>
 
-        <label for="specialty">Domaine :</label>
-        <select id="specialty" required>
-          <option value="Juridique">Juridique</option>
-          <option value="Médical">Médical</option>
-          <option value="Administratif">Administratif</option>
-        </select>
-
-        <label for="email">Adresse e-mail :</label>
-        <input type="email" id="email" placeholder="exemple@mail.com" required>
-
-        <label for="phone">Numéro de téléphone :</label>
-        <input type="tel" id="phone" placeholder="+213 6xx xx xx xx" required>
-
-        <button type="submit" class="btn">Réserver</button>
-      </form>
-      <p id="confirmation-message"></p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Rword Manar. Tous droits réservés.</p>
-  </footer>
+  <!-- PayPal SDK (client ID sandbox fourni par PayPal) -->
+  <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=EUR"></script>
 
   <script>
-    document.getElementById('booking-form').addEventListener('submit', e => {
+    const form = document.getElementById('booking-form');
+    const confirmMsg = document.getElementById('confirmation-message');
+    const paymentBox = document.getElementById('payment-box');
+
+    form.addEventListener('submit', function (e) {
       e.preventDefault();
       const date = document.getElementById('date').value;
       const time = document.getElementById('time').value;
-      const specialty = document.getElementById('specialty').value;
-      const email = document.getElementById('email').value;
-      const phone = document.getElementById('phone').value;
+      const name = document.getElementById('name').value;
 
-      document.getElementById('confirmation-message').textContent =
-        `✅ Réservation confirmée pour ${specialty} le ${date} à ${time}.
-         📧 Email : ${email} | 📞 Téléphone : ${phone}`;
+      confirmMsg.textContent = `✅ Réservation pour ${name} le ${date} à ${time}`;
+      paymentBox.style.display = 'block';
+
+      paypal.Buttons({
+        createOrder: (data, actions) => {
+          return actions.order.create({
+            purchase_units: [{
+              amount: { value: '10.00' },
+              description: "Session de traduction"
+            }]
+          });
+        },
+        onApprove: (data, actions) => {
+          return actions.order.capture().then(details => {
+            document.getElementById('paypal-button-container').innerHTML =
+              `<p style="color:green;">✅ Paiement confirmé par ${details.payer.name.given_name}</p>`;
+          });
+        }
+      }).render('#paypal-button-container');
     });
   </script>
 </body>
